--- a/csgdsr/dsr/templates/dsr/user/forms/csr_form.html
+++ b/csgdsr/dsr/templates/dsr/user/forms/csr_form.html
@@ -18,9 +18,9 @@
       </div>
 
       <div class="col-md-6">
-        <label for="{{ form.police_station.id_for_label }}" class="form-label">Marine Police Station</label>
-        {{ form.police_station.as_widget }}
-        {% for error in form.police_station.errors %}
+        <label for="{{ form.mps_limit.id_for_label }}" class="form-label">MPS Limit</label>
+        {{ form.mps_limit.as_widget }}
+        {% for error in form.mps_limit.errors %}
           <div class="invalid-feedback d-block">{{ error }}</div>
         {% endfor %}
       </div>
@@ -80,9 +80,9 @@
         {% endfor %}
       </div>
       <div class="col-md-6">
-        <label for="{{ form.transfered_to.id_for_label }}" class="form-label">Police Station</label>
-        {{ form.transfered_to.as_widget }}
-        {% for error in form.transfered_to.errors %}
+        <label for="{{ form.io.id_for_label }}" class="form-label">Investigation Officer</label>
+        {{ form.io.as_widget }}
+        {% for error in form.io.errors %}
           <div class="invalid-feedback d-block">{{ error }}</div>
         {% endfor %}
       </div>
