--- a/csgdsr/dsr/templates/dsr/user/submitted_forms/rescue_seizure_summary.html
+++ b/csgdsr/dsr/templates/dsr/user/submitted_forms/rescue_seizure_summary.html
@@ -11,6 +11,7 @@
     {% endfor %}
   </div>
 {% endif %}
+
 <div class="container mt-4">
   <h3 class="mb-4">Rescue At Beach Records</h3>
   <div class="row mb-3">
@@ -71,6 +72,134 @@
       </tbody>
     </table>
   </div>
+
+  {% comment %} Rescue  at Sea  {% endcomment %}
+  <h4 class="mt-5">Rescue at Sea Records</h4>
+  <div class="row mb-3">
+    <div class="col-md-6">
+      <input type="text" id="rescues-search" class="form-control" placeholder="Search by Date / Place / Number of Victims">
+    </div>
+    <div class="col-md-3">
+      <button id="clear-rescues-search" class="btn btn-secondary w-100">
+        <i class="bi bi-x-circle"></i> Clear
+      </button>
+    </div>
+    <div class="col-md-3 text-end">
+      <a href="{% url 'rescue_sea_export_word' %}" class="btn btn-success">
+        <i class="bi bi-download"></i> Download All (Word)
+      </a>
+    </div>
+  </div>
+  <!-- Table container -->
+  <div class="table-responsive" id="rescues-table-wrapper" style="max-height: 500px; overflow-y: auto;">
+    <table class="table table-bordered table-striped align-middle text-center" id="rescues-table">
+      <thead class="table-dark">
+        <tr>
+          <th>S. No</th>
+          <th>Date of Rescue</th>
+          <th>Place of Rescue</th>
+          <th>Number of Victims Rescued</th>
+          <th>Number of Boats Rescued</th>
+          <th>View</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="rescues-table-body">
+        {% for record in rescue_sea_record %}
+          <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>
+              <a href="{% url 'rescue_sea_download' record.id %}" class= "text-decoration-none" target="_blank">
+              {{ record.date_of_rescue|date:"d-m-Y" }}
+            </td>
+            <td>{{ record.place_of_rescue }}</td>
+            <td>{{ record.number_of_victims }}</td>
+            <td>{%if record.number_of_boats_rescued %}{{ record.number_of_boats_rescued }}{% else %}-{% endif %}</td>
+            <td>
+              {% if record.rescue_sea_image %}
+                <a href="{{ record.rescue_sea_image.url }}" download>Download</a>
+              {% else %}
+                -
+              {% endif %}
+            </td>
+            <td>
+              <a href="{% url 'rescue_sea_edit' record.id %}" class="btn btn-sm btn-primary">Edit</a>
+              <a href="{% url 'rescue_sea_delete' record.id %}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this record?');">Delete</a>
+            </td>
+          </tr>
+        {% empty %}
+          <tr>
+            <td colspan="7" class="text-center">No records found.</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
+  {% comment %} Seizure records {% endcomment %}
+  <h4 class="mt-5">Seizure Records </h4>
+  <div class="row mb-3">
+    <div class="col-md-6">
+      <input type="text" id="seizure-search" class="form-control" placeholder="Search by Date /Item / Place /Quantity">
+    </div>
+    <div class="col-md-3">
+      <button id="clear-seizure-search" class="btn btn-secondary w-100">
+        <i class="bi bi-x-circle"></i> Clear
+      </button>
+    </div>
+    <div class="col-md-3 text-end">
+      <a href="{% url 'seizure_export_word' %}" class="btn btn-success">
+        <i class="bi bi-download"></i> Download All (Word)
+      </a>
+    </div>
+  </div>
+  <!-- Table container -->
+  <div class="table-responsive" id="seizure-table-wrapper" style="max-height: 500px; overflow-y: auto;">
+    <table class="table table-bordered table-striped align-middle text-center" id="seizure-table">
+      <thead class="table-dark">
+        <tr>
+          <th>S. No</th>
+          <th>Date of Seizure</th>
+          <th>Place of Seizure</th>
+          <th>Seized Item</th>
+          <th>Quantity</th>
+          <th>Handed over to</th>
+          <th>View</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="seizure-table-body">
+        {% for record in seizure_records %}
+          <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>
+              <a href="{% url 'seizure_download' record.id %}" class= "text-decoration-none" target="_blank">
+              {{ record.date_of_seizure|date:"d-m-Y" }}
+            </td>
+            <td>{{ record.place_of_seizure }}</td>
+            <td>{{ record.seized_item }}</td>
+            <td>{{ record.quantity }}</td>
+            <td>{%if record.handed_over_to %}{{ record.handed_over_to }}{% else %}-{% endif %}</td>
+            <td>
+              {% if record.seizure_image %}
+                <a href="{{ record.seizure_image.url }}" download>Download</a>
+              {% else %}
+                -
+              {% endif %}
+            </td>
+            <td>
+              <a href="{% url 'seizure_edit' record.id %}" class="btn btn-sm btn-primary">Edit</a>
+              <a href="{% url 'seizure_delete' record.id %}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this record?');">Delete</a>
+            </td>
+          </tr>
+        {% empty %}
+          <tr>
+            <td colspan="7" class="text-center">No records found.</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </div>
 
 {% comment %} script for search Rescue at Beach   {% endcomment %}
@@ -97,21 +226,104 @@
                 <td><a href="/rescueb/${entry.id}/download/" class="text-decoration-none" target="_blank"> ${entry.date_of_rescue}</a></td>
                 <td>${entry.place_of_rescue}</td>
                 <td>${entry.number_of_victims}</td>
-                <td><a href="{{ entry.rescue_beach_image.url }}" download>Download</a></td>
                 <td>
-                  <a href="/maritimeact/${entry.id}/edit/" class="btn btn-sm btn-primary">Edit</a>
-                  <a href="/maritimeact/${entry.id}/delete/" class="btn btn-sm btn-danger"
-                     onclick="return confirm('Are you sure you want to delete this entry?');">Delete</a>
+                  ${entry.rescue_beach_image ? `<a href="${entry.rescue_beach_image}" download>Download</a>` : `-`}
+                </td>
+                <td>
+                  <a href="/rescue_at_beach/${entry.id}/edit/" class="btn btn-sm btn-primary">Edit</a>
+                  <a href="/rescue_at_beach/${entry.id}/delete/" class="btn btn-sm btn-danger"
+                    onclick="return confirm('Are you sure you want to delete this entry?');">Delete</a>
                 </td>
               </tr>`;
           });
+
+        }
+      });
+  });
+</script> 
+
+{% comment %} script for search Rescue at Sea 
+ {% endcomment %}
+ <script>
+  document.getElementById('clear-rescues-search').addEventListener('click', function () {
+    location.reload();
+  });
+
+  document.getElementById('rescues-search').addEventListener('input', function () {
+    const query = this.value;
+    fetch(`/rescue_at_sea/ajax-search/rescue_sea/?q=${encodeURIComponent(query)}`)
+      .then(response => response.json())
+      .then(data => {
+        const tbody = document.getElementById('rescues-table-body');
+        tbody.innerHTML = '';
+
+        if (data.length === 0) {
+          tbody.innerHTML = '<tr><td colspan="7">No Rescue entries found.</td></tr>';
+        } else {
+          data.forEach((entry, index) => {
+            tbody.innerHTML += `
+              <tr>
+                <td>${index + 1}</td>
+                <td><a href="/rescue_sea/${entry.id}/download/" class="text-decoration-none" target="_blank"> ${entry.date_of_rescue}</a></td>
+                <td>${entry.place_of_rescue}</td>
+                <td>${entry.number_of_victims}</td>
+                <td>${entry.number_of_boats_rescued ? entry.number_of_boats_rescued : '-'}</td>
+                <td>
+                  ${entry.rescue_sea_image ? `<a href="${entry.rescue_sea_image}" download>Download</a>` : `-`}
+                </td>
+                <td>
+                  <a href="/rescue_at_sea/${entry.id}/edit/" class="btn btn-sm btn-primary">Edit</a>
+                  <a href="/rescue_at_sea/${entry.id}/delete/" class="btn btn-sm btn-danger"
+                    onclick="return confirm('Are you sure you want to delete this entry?');">Delete</a>
+                </td>
+              </tr>`;
+          });
+
+        }
+      });
+  });
+</script> 
+
+{% comment %} script for search Seizure  {% endcomment %}
+<script>
+  document.getElementById('clear-seizure-search').addEventListener('click', function () {
+    location.reload();
+  });
+
+  document.getElementById('seizure-search').addEventListener('input', function () {
+    const query = this.value;
+    fetch(`/seizure/ajax-search/seizure/?q=${encodeURIComponent(query)}`)
+      .then(response => response.json())
+      .then(data => {
+        const tbody = document.getElementById('seizure-table-body');
+        tbody.innerHTML = '';
+
+        if (data.length === 0) {
+          tbody.innerHTML = '<tr><td colspan="8">No Seizure entries found.</td></tr>';
+        } else {
+          data.forEach((entry, index) => {
+            tbody.innerHTML += `
+              <tr>
+                <td>${index + 1}</td>
+                <td><a href="/seizure/${entry.id}/download/" class="text-decoration-none" target="_blank"> ${entry.date_of_seizure}</a></td>
+                <td>${entry.place_of_seizure}</td>
+                <td>${entry.seized_item}</td>
+                <td>${entry.quantity}</td>
+                <td>${entry.handed_over_to ? entry.handed_over_to : '-'}</td>
+                <td>
+                  ${entry.seizure_image ? `<a href="${entry.seizure_image}" download>Download</a>` : `-`}
+                </td>
+                <td>
+                  <a href="/seizure/${entry.id}/edit/" class="btn btn-sm btn-primary">Edit</a>
+                  <a href="/seizure/${entry.id}/delete/" class="btn btn-sm btn-danger"
+                    onclick="return confirm('Are you sure you want to delete this entry?');">Delete</a>
+                </td>
+              </tr>`;
+          });
+
         }
       });
   });
 
-
 </script>
-
-
-  
 {% endblock %}
