--- a/csgdsr/dsr/templates/dsr/user/submitted_forms/beat_vvc_summary.html
+++ b/csgdsr/dsr/templates/dsr/user/submitted_forms/beat_vvc_summary.html
@@ -53,7 +53,7 @@
             <td>{{ record.village_name }}</td>
             <td>{{ record.number_of_villagers }}</td>
             <td>
-              {% if record.rescue_beach_image %}
+              {% if record.vvc_image %}
                 <a href="{{ record.vvc_image.url }}" download>Download</a>
               {% else %}
                 -
