--- a/csgdsr/dsr/templates/dsr/user/submitted_forms/proforma_summary.html
+++ b/csgdsr/dsr/templates/dsr/user/submitted_forms/proforma_summary.html
@@ -48,7 +48,7 @@
         </tr>
       </thead>
       <tbody id="proforma-table-body">
-        {% for record in rescue_records %}
+        {% for record in proforma_records %}
           <tr>
             <td>{{ forloop.counter }}</td>
             <td>
