--- a/csgdsr/dsr/templates/dsr/user/forms/vvc_meeting_form.html
+++ b/csgdsr/dsr/templates/dsr/user/forms/vvc_meeting_form.html
@@ -9,7 +9,7 @@
     {% endfor %}
   {% endif %}
 
-  <form method="post" novalidate>
+  <form method="post" novalidate enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Submit</button>
