--- a/csgdsr/dsr/templates/dsr/user/submitted_forms/vehicle_check_patrol_summary.html
+++ b/csgdsr/dsr/templates/dsr/user/submitted_forms/vehicle_check_patrol_summary.html
@@ -81,7 +81,7 @@
       </button>
     </div>
     <div class="col-md-3 text-end">
-      <a href="{% url 'atv_patrol_export_word_view' %}" class="btn btn-success">
+      <a href="{% url 'atv_patrol_export_word' %}" class="btn btn-success">
         <i class="bi bi-download"></i> Download All (Word)
       </a>
     </div>
@@ -135,7 +135,7 @@
       </button>
     </div>
     <div class="col-md-3 text-end">
-      <a href="{% url 'vehicle_checkpost_export_word_view' %}" class="btn btn-success">
+      <a href="{% url 'vehicle_checkpost_export_word' %}" class="btn btn-success">
         <i class="bi bi-download"></i> Download All (Word)
       </a>
     </div>
