--- a/csgdsr/dsr/templates/dsr/user/user_sidebar.html
+++ b/csgdsr/dsr/templates/dsr/user/user_sidebar.html
@@ -57,12 +57,12 @@
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'vvc_beat_proforma_summary' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'beat__vvc_summary' %}">
               <i class="bi bi-clipboard-data me-2"></i> VVC, Beat & Proforma
             </a>
           </li>
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="{% url 'patrol_vehicle_check_summary' %}">
+            <a class="dropdown-item d-flex align-items-center" href="{% url 'vehicle_check_patrol_summary' %}">
               <i class="bi bi-search me-2"></i> Patrol & Vehicle Check
             </a>
           </li>
